fix: toggle filters on mobile naming

--- a/src/components/Product/products.module.scss
+++ b/src/components/Product/products.module.scss
@@ -7,7 +7,7 @@
 
   &__image {
     height: 196px;
-    max-width: 155px;
+    // max-width: 155px;
     background-color: #fff;
     display: flex;
     align-items: center;
